--- a/pizza-main/index.html
+++ b/pizza-main/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>My Favorite Pizza</title>
+<title>My Funko Collection</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
 
@@ -19,12 +19,12 @@
     <img src="images/pizza.jpg" alt="Pizza with pepperoni and cheese." /> 
   </div>
   <div class="textContainer">
-    <h1>Pizza!</h1>
-    <p>My Favorite Toppings: </p>
+    <h1>Funkos!</h1>
+    <p>My favorite Genres: </p>
     <ul>
-      <li>Pepperoni</li>
-      <li>Mozzarella Cheese</li>
-      <li>Mushrooms</li>
+      <li>Marvel</li>
+      <li>Sports Figures</li>
+      <li>Star Wars</li>
     </ul>
   </div>
 </div>
