--- a/pizza-main/index.html
+++ b/pizza-main/index.html
@@ -16,7 +16,7 @@
 
 <div class="pageContainer">
   <div class="imageContainer"> 
-    <img src="images/pizza.jpg" alt="Pizza with pepperoni and cheese." /> 
+    <img src="YoungAvengers.jpg" alt="Ms. Marvel and Spider-Man peace." /> 
   </div>
   <div class="textContainer">
     <h1>Funkos!</h1>
